updated file with html file

--- a/firstfile.html
+++ b/firstfile.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
 <body>
-<h1>this is my 1st file in github</h1>
+<h1>this is my 1st html file in github</h1>
 </body>
 </html>
