difference in fonts of all the heading ,para and span tag

--- a/firstfile.html
+++ b/firstfile.html
@@ -1,6 +1,13 @@
 <html>
 <head></head>
 <body>
-<h1>this is my 1st html file in github</h1>
+<h1>this is my 1st html file in github</h2>
+  <h2>this is my 1st html file in github</h2>
+  <h3>this is my 1st html file in github</h3><h4>this is my 1st html file in github</h4>
+  <h5>this is my 1st html file in github</h5>
+  <h6>this is my 1st html file in github</h6>
+  <p>this is my 1st html file in github</p>
+  <span>this is my 1st html file in github</span>
+  
 </body>
 </html>
