added 3 more tags to my file

--- a/firstfile.html
+++ b/firstfile.html
@@ -8,6 +8,10 @@
   <h6>this is my 1st html file in github</h6>
   <p>this is my 1st html file in github</p>
   <span>this is my 1st html file in github</span>
+  <strong>this is my 1st html file in github</strong>
+  <b>this is my 1st html file in github</b>
+  <i>this is my 1st html file in github</i>
+  <u>this is my 1st html file in github</u>
   
 </body>
 </html>
